# primare-module-openclaw

./: .gitignore  .yamllint  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  hooks.yml  pyproject.toml  pytest.ini
.github/workflows/: docker-build.yml  lint.yml  security.yml  test.yml
configs/: supervisord.conf
configs/caddy/: module.caddy
docs/: OVERVIEW.md
hooks/: apply-config.yml  assert-secrets.yml  bind-discord-agent.yml  configure-discord.yml  create-default-agent.yml  create-dirs.yml  install-log-metrics.yml  openclaw-log-metrics.service.j2  openclaw-log-metrics.sh  openclaw-log-metrics.timer.j2  persist-gateway-token.yml  set-defaults.yml  smoke-test.yml
scripts/: compute-hooks-tree-hash.sh
src/primare_module_openclaw/: __init__.py  main.py
tests/: conftest.py
tests/unit/: test_module_contract.py  test_shim.py
